--- a/src/scss/imports/_components.imports.scss
+++ b/src/scss/imports/_components.imports.scss
@@ -2,3 +2,4 @@
 @import '../06.components/layout.components';
 @import '../06.components/main.components';
 @import '../06.components/form.components';
+@import '../06.components/loading.components';
